Fixed the overflow issue when the quote is too long for the box

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,12 +79,13 @@ img{
 .card {
     background-color:#b6aea2;
     width: 700px;
-    min-height: 900px;
+    height: 900px;
     border: #3b2c2f 5px solid;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.4);
     overflow: hidden; /* keeps image + text inside the rounded corners */
     padding: 0px 20px;
+    overflow: auto;
 }
 
 #show{
